# fast-api-example

./: README.md  alembic.ini  database.py  main.py  pyproject.toml
alembic/versions/: 2f7a73171f5a_initial_migration.py
